<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:title="@string/Search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sortBy"
            android:title="@string/SortBy">
            <menu>
                <item android:id="@+id/menu_priority_high"
                    android:title="@string/priorityHigh"></item>
                <item android:id="@+id/menu_priority_low"
                    android:title="@string/priorityLow"></item>
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_filter"
            android:title="@string/Filter">
            <menu>
                <item android:id="@+id/menu_filter_work"
                    android:title="@string/filter_work"></item>
                <item android:id="@+id/menu_filter_study"
                    android:title="@string/filter_study"></item>
                <item android:id="@+id/menu_filter_social"
                    android:title="@string/filter_social"></item>
                <item android:id="@+id/menu_filter_entertain"
                    android:title="@string/filter_entertain"></item>
                <item android:id="@+id/menu_filter_others"
                    android:title="@string/filter_others"></item>
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never">

    </item>

</menu>